refactor(DeleteHistory): cleanse constructor and static factory methods